# brpc

./: .gitignore  Dockerfile  README.md
brpc/: Dockerfile  README.md
brpc/common/: common.cmake
brpc/echo_c++/: CMakeLists.txt  README.md  docker-compose.yml
brpc/etcd_proxy/: client.cpp
brpc/jarvis/: CMakeLists.txt  README.md  TODO  docker-compose.yml  main.cpp
brpc/jarvis/conf/: default.conf  gflags.conf
brpc/jarvis/doc/: 01Financial.md  02Login.md  03Task.md  04OKR.md
brpc/jarvis/proto/: jarvis.proto  table.proto
brpc/jarvis/script/python/: monthly  weekly.py
brpc/jarvis/script/shell/: timer
brpc/jarvis/shell/: timer
brpc/jarvis/src/: asset.cpp  jarvis.cpp  jarvis.h  login.cpp  okr.cpp  records.cpp  task.cpp  users.cpp  util.cpp  util.h
brpc/mysql/: CMakeLists.txt  client.cpp
common/: CMakeLists.txt  common.cmake
common/config/: README.md  config.cpp  config.h
common/log/: asynclog.cpp  asynclog.h
common/mysql/: mysql.h  mysql_select.cpp
common/proto/: text_config.proto
common/util/: base64.cpp
echo_c++/: CMakeLists.txt  client.cpp  etcd_client.cpp  etcd_client.h  xlog.h
etcd_proxy/: CMakeLists.txt  README.md  etcd_client.cpp  server.cpp
go/webgen/: README.md  config.json  go.mod  go.sum  main.go  prerequisite.go
go/xpansync/: Dockerfile  README.md  appinfo.sample.json  chanify.go  docker-compose.pro.yml  docker-compose.yml  embedUI.go  go.mod  go.sum  main.go  service.go
jarvis/: CMakeLists.txt  README.md  TODO  main.cpp
jarvis/mysql/: mysql.h  mysql_connect.cpp  mysql_printf.cpp  mysql_select.cpp
jarvis/proto/: jarvis.proto  table.proto
jarvis/src/: jarvis.cpp  jarvis.h
log_agent/: Dockerfile  README.md  docker-compose.yml
log_agent/include/: asynclog.h
log_agent/script/: start_container.sh
monitor/: README.md  docker-compose.yml
monitor/prometheus/: prometheus.yml
mysql/: CMakeLists.txt  README.md
util/: base64.h  sys_helper.cpp  sys_helper.h
web/: update_hostname.sh
web/affine/: Dockerfile  docker-compose.yml
web/alist/: compose.yaml
web/amis/: Dockerfile  Dockerfile-create  README.md  docker-compose.yml  jarvis.html
web/answer/: compose.yml
web/apollo/: docker-compose.yml
web/appflowy/: Dockerfile  docker-compose.yml
web/chanify/: README.md  config.yml  docker-compose.yml
web/dailynotes/: compose.yaml
web/dockge/: docker-compose.yml
web/docsify/: Dockerfile  README.md  docker-compose.yml
web/etcd/: .env  compose.yaml
web/focalboard/: docker-compose.yml
web/grafana/: compose.yaml
web/hedgedoc/: compose.yaml
web/home/: .bash_history  app.js  docker-compose.yml  package-lock.json  package.json
web/homepage/: docker-compose.yml
web/joplin/: .env  compose.yaml
web/jotsy/: compose.yaml
web/logseq/: compose.yaml
web/memos/: docker-compose.yml
web/mkdocs/: compose.yaml
web/mlul/: Dockerfile  README.md  docker-compose.yml
web/monitor/: docker-compose.yml  ps_metrics_pusher
web/nav/: docker-compose.yml
web/navidrome/: docker-compose.yml
web/nginx/: Dockerfile  docker-compose.yml
(+158 files in other folders)
